dataset1235/2025-2/610742602/users/2774042468/executions/2563853024_1319609354.log
== SUBMISSION (2025-09-02 20:32:42)
-- CODE: 
n1 = float(input(numero))
n2 = float(input(numero))

media = n1 + n2 / 2
print(media(n1+n2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:23:31)
-- CODE: 
n1 = float(input(4))
n2 = float(input(4))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
447.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
4414.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
4414.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
4411.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
4412.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
447.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:37:51)
-- CODE: 
n1 = float(input())
n2 = float(input())

media = n1/2 + n2 / 2
print(media(n1+n2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:32:41)
-- CODE: 
n1 = float(input(numero))
n2 = float(input(numero))

media = n1 + n2 / 2
print(media(n1+n2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(input(numero))
                     ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:32:20)
-- CODE: 
n1 = float(input())
n2 = float(input())

media = n1 + n2 / 2
print(media(n1+n2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:23:13)
-- CODE: 
n1 = float(input(3))
n2 = float(input(4))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
347.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
3414.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
3414.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
3411.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
3412.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
347.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:23:14)
-- CODE: 
n1 = float(input(3))
n2 = float(input(4))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
347.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
3414.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
3414.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
3411.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
3412.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
347.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:32:21)
-- CODE: 
n1 = float(input())
n2 = float(input())

media = n1 + n2 / 2
print(media(n1+n2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:23:31)
-- CODE: 
n1 = float(input(4))
n2 = float(input(4))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
447.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
4414.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
4414.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
4411.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
4412.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
447.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:37:52)
-- CODE: 
n1 = float(input())
n2 = float(input())

media = n1/2 + n2 / 2
print(media(n1+n2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(media(n1+n2))
          ^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
